php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32753 Undefined Constant SQLite
Submitted: 2005-04-18 22:46 UTC Modified: 2005-04-19 04:59 UTC
From: anthony at drpimp dot com Assigned:
Status: Closed Package: *Compile Issues
PHP Version: 5.0.4 OS: Windows XP
Private report: No CVE-ID: None
 [2005-04-18 22:46 UTC] anthony at drpimp dot com
Description:
------------
Looks like the following constant "SQLITE_NOTADB" is missing from the source


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-04-19 04:59 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC