Fixed bug #32753 (Undefined constant SQLITE_NOTADB).